[gd_scene load_steps=2 format=3 uid="uid://d0uicm7r3xgxa"]

[ext_resource type="Script" uid="uid://c2vph7s6hp88r" path="res://ui/game/hud/quick_menu_hud.gd" id="1_8arqo"]

[node name="QuickMenuHUD" type="Control"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 960.0
offset_top = -240.0
offset_right = -8.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_8arqo")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
clip_contents = true

[node name="ButtonStack" type="VBoxContainer" parent="Panel"]
layout_mode = 0

theme_override_constants/separation = 6

[node name="MenuButton" type="Button" parent="Panel/ButtonStack"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Menu"

[node name="InventoryButton" type="Button" parent="Panel/ButtonStack"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Inventory"

[node name="CharacterButton" type="Button" parent="Panel/ButtonStack"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Character"

[node name="ToggleButton" type="Button" parent="."]
custom_minimum_size = Vector2(110, 24)
layout_mode = 0
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = -24.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
text = "â–¼"
